fixed some flicker in sticky login bar

--- a/apparelrow/sass/src/partials/_application.sass
+++ b/apparelrow/sass/src/partials/_application.sass
@@ -121,6 +121,8 @@ button
 
 #container
   background: $white_color
+  #sticky-login-placeholder
+    width: 100%
   #sticky-login-bar
     position: relative
     width: 100%
@@ -2197,6 +2199,8 @@ body.settings, body.about, body.dashboard-info
   width: 100%
   overflow: hidden
   border-bottom: 1px solid #E6E6E6
+  position: relative
+  z-index: 100
   #panelwrap
     position: relative
     width: 960px - 72
